# mindmap-creator

./: README.md  pyproject.toml
src/mindmap_creator/: __init__.py
src/mindmap_creator/prompts/: mindmap.jinja
src/mindmap_creator/view/: index.html
tests/: test_mindmaps.py
