[project]
name = "mindmap-creator"
version = "0.1.1"
license = "MIT"
description = "Open Notebook creator: LLM-generated mermaid mindmaps (mindmap.v1)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "open-notebook-creator-sdk",
    "esperanto>=2.19",
    "ai-prompter>=0.3.1",
    "langchain-core>=0.3",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.entry-points."open_notebook.creators"]
mindmaps = "mindmap_creator:MindmapCreator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mindmap_creator"]

[tool.uv.sources]
open-notebook-creator-sdk = { git = "https://github.com/Notebooker-ai/open-notebook-creator-sdk.git", branch = "main" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
